--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "jquery": "^3.1.0",
     "inkjs": "^1.0.2",
-    "jquery.scrollTo": "^2.1.2"
+    "jquery.scrollTo": "^2.1.2",
+    "letteringjs": "^0.7.0",
+    "animate.css": "^3.5.2",
+    "textillate": "^0.4.0"
   }
 }
